--- a/InventoriApp-Karanglewas/Gambar.resx
+++ b/InventoriApp-Karanglewas/Gambar.resx
@@ -121,4 +121,7 @@
   <data name="logo_Banyumas" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\logo Banyumas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Logo Amikom (2)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Logo Amikom (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
