--- a/InventoriApp-Karanglewas/Gambar.resx
+++ b/InventoriApp-Karanglewas/Gambar.resx
@@ -125,6 +125,6 @@
     <value>Resources\logo Banyumas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="image_Beranda" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\image_Beranda1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Resources\image_Beranda.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
